MOD-1736 fix z-index for zoom.js images

--- a/src/main/resources/css/appStore.css
+++ b/src/main/resources/css/appStore.css
@@ -1683,7 +1683,7 @@ img[data-action="zoom"] {
 .zoom-img,
 .zoom-img-wrap {
     position: relative;
-    z-index: 666;
+    z-index: 1500;
     -webkit-transition: all 300ms;
     -o-transition: all 300ms;
     transition: all 300ms;
